[tool.poetry]
name = "attrs-data"
version = "0.1.0"
description = ""
authors = ["c2io <c2io@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "attrs_data" }]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
loguru = "^0.6.0"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = false
secondary = false


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
